# Styxx-Static-Regen-1.5.97

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/: PCH.h  plugin.cpp
